<resources>
    <string name="app_name" translatable="false">CoinData</string>

    <string name="Asset">ASSET</string>
    <string name="Price">Price</string>
    <string name="PRICE">PRICE</string>
    <string name="PriceDollar">Price $</string>
    <string name="PriceBTC">Price in BTC:</string>
    <string name="ChangePrice">PRICE CHANGE</string>
    <string name="Rank">Rank:</string>

    <string name="MarketCap">Cap</string>
    <string name="MarketCapitalization">Market capitalization:</string>
    <string name="Volume24">Vol</string>
    <string name="Volume24Hours">Volume in 24 hours:</string>

    <string name="CirculatingSupply">Circulating supply:</string>
    <string name="TotalSupply">Total supply:</string>
    <string name="Description">Description</string>
    <string name="Exchange">Exchange</string>

    <string name="PriceChange">Price change:</string>
    <string name="PercentOneHour">1H</string>
    <string name="PercentOneDay">1D</string>
    <string name="PercentSevenDays">7D</string>

    <string name="H1">1H</string>
    <string name="D1">1D</string>
    <string name="D7">7D</string>
    <string name="M3">3M</string>
    <string name="Y1">1Y</string>
    <string name="MAX">MAX</string>

    <string name="BTC" translatable="false">BTC</string>

    <string name="AboutApp">"\t" CoinData gives you list of cryptocurrencies (2000+, which
        sorted by its market capitalization), prices on a few markets and description about
        choosed coin. All data updates online and provides by very good services (see below).
        Please note that graph information provided by crypto exchange www.hitbtc.com and max
        range equal to history of trading on this exchange.</string>
    <string name="CryptocurrencyABC">What is cryptocurrency?</string>
    <string name="CryptocurrencyABCData"> "\t" A cryptocurrency (or crypto currency) is a digital
        asset designed to work as a medium of exchange that uses strong cryptography to
        secure financial transactions, control the creation of additional units, and
        verify the transfer of assets. Cryptocurrencies use decentralized control
        as opposed to centralized digital currency and central banking systems.
        "\n \t" The decentralized control of each cryptocurrency works through distributed ledger
        technology, typically a blockchain, that serves as a public financial transaction
        database.
        "\n \t" Bitcoin, first released as open-source software in 2009, is generally considered
        the first decentralized cryptocurrency. Since the release of bitcoin, over 6,000
        altcoins (alternative variants of bitcoin, or other cryptocurrencies) have been
        created.
        "\n \t" Source: wikipedia.org/wiki/Cryptocurrency</string>

    <string name="Update">UPDATE</string>
    <string name="UPDATE_TIME">Update time - </string>

    <string name="Category">Category:</string>
    <string name="HashingAlgorithm">Hashing algorithm:</string>
    <string name="Homepage">Homepage:</string>
    <string name="GenesisDate">Genesis date:</string>

    <string name="dollar" translatable="false">$</string>

    <string name="data_not_found">No data found</string>
    <string name="internet_error">Something went wrong. Please, check your internet connection</string>
    <string name="loading">loading…</string>

    <string name="Coinlore" translatable="false">Coinlore</string>
    <string name="CoinloreLink" translatable="false">www.coinlore.com</string>

    <string name="Coingecko" translatable="false">Coingecko</string>
    <string name="CoingeckoLink" translatable="false">www.coingecko.com</string>

    <string name="Cryptonator" translatable="false">Cryptonator</string>
    <string name="CryptonatorLink" translatable="false">www.cryptonator.com</string>

    <string name="HitBTC" translatable="false">HitBTC</string>
    <string name="HitBTCLink" translatable="false">www.hitbtc.com</string>
    <string name="sources">Data sources</string>
    <string name="about">About app</string>
    <string name="about_button">ABOUT</string>
    <string name="coin_logo">This is a logo of selected coin</string>
    <string name="percent" translatable="false">%</string>
    <string name="connection_error">Connection error</string>
    <string name="PercentTwentyFourHour">24H</string>
    <string name="item_coin_rank" translatable="false">rank</string>
    <string name="item_coin_symbol" translatable="false">symbol</string>
    <string name="item_coin_name" translatable="false">name</string>
    <string name="item_coin_price_usd" translatable="false">price_usd</string>
    <string name="item_coin_percent_change_1h" translatable="false">percent_change_1h</string>
    <string name="item_coin_percent_change_24h" translatable="false">percent_change_24h</string>
    <string name="item_coin_percent_change_7d" translatable="false">percent_change_7d</string>
    <string name="item_coin_market_cap_usd" translatable="false">market_cap_usd</string>
    <string name="item_coin_volume24" translatable="false">volume24</string>
    <string name="settings">Settings</string>
    <string name="symbol">Symbol:</string>
    <string name="blockchainSite">Blockchain site:</string>
    <string name="theme_description">Chose app theme</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_title_item">App theme</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="about_version" translatable="false">1.4.4</string>
    <string name="about_version_text">App version</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_rate">Rate this app on GooglePlay</string>
    <string name="feedback_rate_summary">Share your opinion</string>
    <string name="feedback_rate_url" translatable="false">https://play.google.com/store/apps/details?id=app.pavel.coindata</string>
    <string name="title_activity_settings2">Settings</string>

    <string name="exit">Exit</string>
    <string name="settings_theme_key" translatable="false">pref_theme</string>

</resources>