<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:theme="@style/RobotoTextViewStyle"
        android:text="@string/Asset"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:theme="@style/RobotoTextViewStyle"
        android:text="@string/PRICE"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvChangeOfPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:theme="@style/RobotoTextViewStyle"
        android:text="@string/ChangePrice"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />
</FrameLayout>