<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/colorWhite"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView android:layout_height="match_parent"
                android:layout_width="match_parent">
        <LinearLayout
            android:id="@+id/CoinContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCoinNAMEData"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="65"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvCoinSymbolData"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:gravity="center"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imageViewCoin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rank"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tvRankData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="17sp"
                        android:textStyle="bold"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Category"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:id="@+id/tvCategoryData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCoinPRICE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Price"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tvCoinPRICEData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCoinPriceBTC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PriceBTC"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tvCoinPriceBTCData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPriceChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PriceChange"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/tvPercentOneHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/PercentOneHour"
                        android:textSize="13sp"
                        />

                    <TextView
                        android:id="@+id/tvPercentOneHourData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvPercentTwentyFourHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/PercentTwentyFourHour"
                        android:textSize="13sp"
                        />

                    <TextView
                        android:id="@+id/tvPercentTwentyFourHourData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvPercentSevenDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/PercentSevenDays"
                        android:textSize="13sp"
                        />

                    <TextView
                        android:id="@+id/tvPercentSevenDaysData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvMarketCap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MarketCapitalization"
                            android:textSize="15sp"
                            />

                        <TextView
                            android:id="@+id/tvVolume24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/Volume24Hours"
                            android:textSize="15sp"
                            />
                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvMarketCapData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvVolume24Data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvUsage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </RadioGroup>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCirculatingSupply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CirculatingSupply"
                            android:textSize="15sp"
                            />

                        <TextView
                            android:id="@+id/tvTotalSupply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/TotalSupply"
                            android:textSize="15sp"
                            />
                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCirculatingSupplyData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvTotalSupplyData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvEmission"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </RadioGroup>
                </RadioGroup>

                <TextView
                    android:id="@+id/tvMarkets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Markets"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvColumn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/Exchange"
                        android:textSize="15sp"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/tvColumn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/PriceDollar"
                        android:textSize="15sp"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/tvColumn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="30dp"
                        android:text="@string/Volume24"
                        android:textSize="15sp"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <TableLayout
                    android:id="@+id/tlMarkets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                </TableLayout>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Description"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <WebView
                    android:id="@+id/tvDescriptionData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>